--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         <i data-lucide="file-text" class="mr-2"></i>
                         View Full Report (PDF)
                     </a>
-                    <a href="https://github.com" target="_blank" rel="noopener noreferrer" class="flex items-center text-gray-700 hover:text-gray-900 transition duration-300 font-semibold">
+                    <a href="https://github.com/anonymousAAK/QM-housing-project" target="_blank" rel="noopener noreferrer" class="flex items-center text-gray-700 hover:text-gray-900 transition duration-300 font-semibold">
                         <i data-lucide="github" class="mr-2"></i>
                         View on GitHub
                     </a>
