--- a/index.html
+++ b/index.html
@@ -173,7 +173,16 @@
                     </div>
                 </div>
             </section>
-            
+                         <!-- Conclusion -->
+            <section id="conclusion" class="bg-indigo-700 text-white p-8 rounded-xl shadow-lg">
+                <h2 class="section-title text-2xl text-white mb-4 flex items-center">
+                    <i data-lucide="flag" class="mr-3"></i>
+                    Conclusion
+                </h2>
+                <p class="leading-relaxed opacity-90">
+                    The Boston Housing dataset, despite its age and flaws, remains a powerful teaching tool. Our linear regression model successfully isolated the timeless drivers of property value—primarily property size and neighborhood socioeconomic health. It serves not as a predictive tool, but as a strategic one. It demonstrates quantitatively how real estate value is inextricably linked to broader social and environmental conditions. For future business leaders, this analysis provides a foundational lesson: sustainable value creation in real estate is about more than just bricks and mortar; it's about investing in the health, safety, and vitality of the communities themselves.
+                </p>
+            </section>
             <!-- Footer Links -->
             <footer class="text-center border-t pt-8 mt-12">
                 <div class="flex justify-center items-center space-x-8">
