--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 </div>
             </section>
                          <!-- Conclusion -->
-            <section id="conclusion" class="bg-indigo-700 text-white p-8 rounded-xl shadow-lg">
+            <section id="conclusion" class="bg-indigo-700 text-white p-8 rounded-xl shadow-lg mb-20">
                 <h2 class="section-title text-2xl text-white mb-4 flex items-center">
                     <i data-lucide="flag" class="mr-3"></i>
                     Conclusion
