--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <!-- Header -->
             <header class="text-center mb-16">
                 <p class="text-indigo-600 font-semibold mb-2">MBA Term 1 Report</p>
-                <h1 class="report-title text-4xl md:text-5xl text-gray-800">Valuing the American Dream</h1>
+                <h1 class="report-title text-4xl md:text-5xl text-gray-800">Modelling the Drivers of Property Prices</h1>
                 <p class="mt-4 text-lg text-gray-600 max-w-3xl mx-auto">A Linear Regression Analysis of the 1970s Boston Housing Market</p>
             </header>
 
