--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-12 md:py-20">
             <!-- Header -->
             <header class="text-center mb-16">
-                <p class="text-indigo-600 font-semibold mb-2">MBA Term 1 Report</p>
+                <p class="text-indigo-600 font-semibold mb-2">MBA Term 1 Report by Adarsh,Anupriya,Amanchi,Shreerup,Rakesh,Muskan</p>
                 <h1 class="report-title text-4xl md:text-5xl text-gray-800">Modelling the Drivers of Property Prices</h1>
                 <p class="mt-4 text-lg text-gray-600 max-w-3xl mx-auto">A Linear Regression Analysis of the 1970s Boston Housing Market</p>
             </header>
