--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <section id="drivers" class="mb-16">
                 <h2 class="section-title text-3xl text-center text-gray-800 mb-10">
                     
-                    Key Drivers of Property Value</h2>
+                    Key Drivers of Property Value in $'000</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
                     
                     <!-- Card: Number of Rooms -->
